# voxel-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: sphere.kv6
cmake/: FindOpenGL.cmake  FindSDL2.cmake
include/core/: Common.hpp  KV6Model.hpp
src/: CMakeLists.txt  main.cpp
src/core/: KV6Model.cpp  KV6Model.hpp  Math.hpp  main.cpp
